--- a/src/styles.css
+++ b/src/styles.css
@@ -3,31 +3,46 @@
   display: flex;
   justify-content: center;
 }
+
 .todo .done {
+  font-weight: bold;
+}
+
+.todo .done span {
   text-decoration: line-through;
 }
+
 .todos-container {
   margin: 20px 0 0;
   font-family: "Calibri";
   width: 80%;
 }
+
 .todos-container .todo {
   display: flex;
   align-content: space-around;
   align-items: center;
   margin-bottom: 10px;
 }
-.todo span {
+
+.todo p {
   margin: 0 5px 0;
   cursor: pointer;
   transition: all 0.2s ease;
+  display: flex;
+  align-items: center;
 }
-.todo span:hover {
-  font-size: 1.3em;
+.todo p .far {
+  margin-right: 5px;
 }
+
 .todo .remove {
   margin-left: 5px;
+  background: none;
+  border: none;
+  box-shadow: none;
 }
+
 .add-todo input {
   width: 100%;
   padding: 5px 10px;
