--- a/src/styles.css
+++ b/src/styles.css
@@ -6,9 +6,6 @@
 
 .todo .done {
   font-weight: bold;
-}
-
-.todo .done span {
   text-decoration: line-through;
 }
 
@@ -36,12 +33,30 @@
   margin-right: 5px;
 }
 
+.todo .edit {
+  margin-left: 5px;
+  background: none;
+  border: none;
+  box-shadow: none;
+  cursor: pointer;
+}
+
 .todo .remove {
   margin-left: 5px;
   background: none;
   border: none;
   box-shadow: none;
+  cursor: pointer;
 }
+
+.todo input {
+  margin-left: 5px;
+  background: none;
+  border: none;
+  box-shadow: none;
+  cursor: pointer;
+}
+
 
 .add-todo input {
   width: 100%;
